chore(workspace): downgrade java compiler to 8 and adapt code
The pom.xml was updated to set maven.compiler.release to 8.
This required refactoring MapperUtil to use Collections.emptyList()
and Collections.singletonList() instead of List.of(), which is
a Java 9+ feature.

Additionally, all unit tests were updated to construct JSON strings
programmatically using Gson.JsonObject and Gson.JsonArray instead
of Java 15+ text blocks. Optional.isEmpty() calls were also replaced
with Optional.isPresent() checks for Java 8 compatibility.